--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ reviews.</p><span class="u-icon u-icon-circle u-text-palette-2-base u-icon-2"><s
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2"><span class="u-file-icon u-icon u-icon-circle u-palette-3-base u-spacing-10 u-icon-2"><img src="images/4706857.png" alt=""></span>
-                <h5 class="u-text u-text-3">Recoganised Doctors in India</h5>
+                <h5 class="u-text u-text-3">Recognized Doctors in India</h5>
                 <p class="u-text u-text-grey-40 u-text-4"> We have just made a prototype, press Ctrl+f to search your problem</p>
                 <a href="Doctor.html" data-page-id="505009410" class="u-border-2 u-border-palette-3-base u-btn u-btn-round u-button-style u-hover-palette-3-base u-none u-radius-25 u-text-hover-white u-text-palette-3-base u-btn-2" target="_blank">Enlighten</a>
               </div>
